--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body id="body">
@@ -55,7 +56,7 @@
     </section>
 
     <!-- banner -->
-    <section id="banner" class="text-center inter-font">
+    <section id="banner" class="text-center inter-font my-lg">
         <div>
 
             <h1 class="mb-sm fs-2 fw-900">
@@ -69,7 +70,7 @@
     </section>
 
     <!-- website advert -->
-    <section id="webadvert" class="dm-sans-font">
+    <section id="webadvert" class="dm-sans-font my-lg">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -92,7 +93,7 @@
     </section>
 
     <!-- why choose us -->
-    <section id="whyChooseUs" class="dm-sans-font">
+    <section id="whyChooseUs" class="dm-sans-font my-lg">
         <div class="container">
             <h4 class="fs-3 mt-y-lg">So why should I choose you?</h4>
             <div class="why-choose-us-box-container">
@@ -123,7 +124,7 @@
     </section>
 
     <!-- services section -->
-    <section id="services" class="dm-sans-font">
+    <section id="services" class="dm-sans-font my-lg">
         <div class="container">
             <h3 class="fs-2 fw-800 mt-y-lg">Services</h3>
             <div class="service-boxes">
@@ -163,13 +164,45 @@
     </section>
 
     <!-- recent work -->
-    <section id="recent-work" class="text-center dm-sans-font">
+    <section id="recent-work" class="text-center dm-sans-font my-lg">
         <h3 class="fs-2 fw-800 mt-y-lg">Recent work</h3>
-
+        <div class="container">
+            <div class="recent-work-images-container">
+                <a href="#" class="recent-work-box">
+                    <div class="recent-work-tags">
+                        <span>Agency</span>
+                        <span>2024</span>
+                    </div>
+                    <img src="assets/images/agency-work-image-8.png" height="300" alt="">
+                </a>
+                <a href="#" class="recent-work-box">
+                    <div class="recent-work-tags">
+                        <span>Ecommerce</span>
+                        <span>2024</span>
+                    </div>
+                    <img src="assets/images/agency-work-image-8.png" height="300" alt="">
+                </a>
+                <a href="#" class="recent-work-box">
+                    <div class="recent-work-tags">
+                        <span>Real estate</span>
+                        <span>2024</span>
+                    </div>
+                    <img src="assets/images/agency-work-image-8.png" height="300" alt="">
+                </a>
+                <a href="#" class="recent-work-box">
+                    <div class="recent-work-tags">
+                        <span>Health</span>
+                        <span>2024</span>
+                    </div>
+                    <img src="assets/images/agency-work-image-8.png" height="300" alt="">
+                </a>
+              
+            </div>
+        </div>
     </section>
 
     <!-- results section -->
-    <section id="results" class="dm-sans-font">
+    <section id="results" class="dm-sans-font my-lg">
         <div class="container">
             <h3 class="fs-2 fw-600 mt-y-lg">Results</h3>
             <div class="result-sample mb-xl">
@@ -183,8 +216,8 @@
     </section>
 
     <!-- faq section -->
-    <section id="faq" class="mb-lg">
-        <h3 class="text-center uppercase fs-2 league-spartan-font">FAQ</h3>
+    <section id="faq" class="my-lg">
+        <h3 class="text-center uppercase fs-2 league-spartan-font mb-lg">FAQ</h3>
         <div class="accordion-container">
             <div class="accordion-item">
                 <button class="accordion-button">
@@ -253,7 +286,7 @@
     </section>
 
     <!-- what our clients say -->
-    <section id="clients" class="league-spartan-font text-center">
+    <section id="clients" class="league-spartan-font text-center my-lg">
         <div class="container">
             <h3 class="fs-2 mb-sm">What our clients say</h3>
             <p class="mb-lg     ">"What I liked the most is you're very easy to reach. It doesn't take you long
@@ -277,19 +310,21 @@
     </section>
 
     <!-- book a call now -->
-    <section id="bookacall" class="league-spartan-font mt-y-lg mb-lg">
+    <section id="bookacall" class="dm-sans-font my-lg">
         <div class="container">
             <div class="book-a-call">
-                <div class="call-us-cta w-50 text-center">
-                    <h1 class="fs-1 fw-600 mt-y-lg">Book a free call!</h1>
+                <div class="call-us-cta w-50 text-center px-sm">
+                    <h1 class="fs-2 fw-600 mt-sm">Book a free call!</h1>
                     <p class="fw-normal">Simply fill out the form and I'll get back to you with the next <br>
                         steps in 24 hours.</p>
+                    <img class="mt-xl animate__animated animate__bounce " src="assets/images/telephone.png" width="200"
+                        height="200" alt="call us image">
                 </div>
-                <div class="contact-form w-50">
+                <div class="contact-form w-50 px-sm">
                     <form action="" id="callUsForm">
-                        <label for="customername">Name</label>
+                        <label for="customername"><sup class="text-red">*</sup>Name</label>
                         <input type="text" name="customername" id="customerName">
-                        <label for="customermail">Email</label>
+                        <label for="customermail"><sup class="text-red">*</sup>Email</label>
                         <input type="email" name="customermail" id="customerMail">
                         <!-- <label for="funnel">How did you find us?</label>
                         <select name="funnel" id="funnel">
@@ -297,15 +332,15 @@
                             <option value="twitter">Twitter</option>
                             <option value="youtube">Youtube</option>
                         </select> -->
-                        <label for="currentsite">Your website address</label>
+                        <label for="currentsite"><sup class="text-red">*</sup>Your website address</label>
                         <input type="text" name="currentsite" id="currentsite">
-                        <label for="budget">Estimated budget</label>
+                        <label for="budget"><sup class="text-red">*</sup>Estimated budget</label>
                         <select name="budget" id="budget">
                             <option value="200,000">200,000</option>
                             <option value="300000">350,000 - 500,000</option>
                             <option value="1000000">1000000+</option>
                         </select>
-                        <label for="sitedetails">Your goal for the website</label>
+                        <label for="sitedetails"><sup class="text-red">*</sup>Your goal for the website</label>
                         <textarea name="sitedetails" id="sitedetails"></textarea>
                         <label for="extradetails">Anything else you want me to know about</label>
                         <textarea name="extradetails" id="extradetails"></textarea>
@@ -322,53 +357,30 @@
             <div class="logo-and-social-links">
                 <h1 class="text-white">nwc</h1>
                 <div class="social-media-links text-white">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-instagram" viewBox="0 0 16 16">
-                        <path
-                            d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-envelope" viewBox="0 0 16 16">
-                        <path
-                            d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
-                    </svg>
+                    <i class="bi bi-instagram fs-3 mr-sm"></i>
+                    <i class="bi bi-envelope fs-3"></i>
                 </div>
             </div>
-            <div class="footer-link">
-                <span>services</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-arrow-up-right" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z" />
-                </svg>
-            </div>
-            <div class="footer-link">
-                <span>work</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-arrow-up-right" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z" />
-                </svg>
-            </div>
-            <div class="footer-link">
-                <span>testimonials</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                    fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z" />
-                </svg>
-            </div>
-            <div class="footer-link">
-                <span>FAQ</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-arrow-up-right" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z" />
-                </svg>
-            </div>
-            <div class="footer-link">
-                <span>book a call</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                    fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z" />
-                </svg>
-            </div>
+            <a href="" class="footer-link">
+                <span>services</span>
+                <i class="bi bi-arrow-up-right fw-900"></i>
+            </a>
+            <a href="#" class="footer-link">
+                <span>work</span>
+                <i class="bi bi-arrow-up-right fw-900"></i>
+            </a>
+            <a href="#" class="footer-link">
+                <span>testimonials</span>
+                <i class="bi bi-arrow-up-right fw-900"></i>
+            </a>
+            <a href="#" class="footer-link">
+                <span>FAQ</span>
+                <i class="bi bi-arrow-up-right fw-900"></i>
+            </a>
+            <a href="#" class="footer-link">
+                <span>book a call</span>
+                <i class="bi bi-arrow-up-right fw-900 "></i>
+            </a>
             <hr>
             <p class="py-lg copyright">nwc<sup>TM</sup> 2024 - All Rights Reserved</p>
         </div>
